src/styles/app.scss
/* ... */
.visualization-container {
  display: inline-block;
  width: 100%;
  height: calc(100vh - 85px);
  overflow: hidden;
  $enabledColor: #bbb;

  .button {
    position: absolute;
    width: 30px;
    height: 30px;
    margin: 0;
    padding: 8px 7px;
    top: 75px;
    background-color: $brand-accent-light;
    border: 1px solid $brand-accent-light;
    line-height: 0.6;
    color: white;
  }

  .button:hover {
    color: white;
    background-color: $brand-accent-dark;
    border: 1px solid $brand-accent-dark;
    cursor: pointer;
  }

  .zoom-out { left: 25px; }
  .zoom-in { left: 60px; }
  .zoom-fit { left: 95px; }
  .zoom-focus { left: 130px; }
  .focus-in { left: 165px; }
  .focus-indicator {
    @include no-select;
    left: 195px;
    text-align: center;
    line-height: 1;
    &:hover {
      background-color: $brand-accent-dark;
      cursor: default;
    }
  }
  .focus-out { left: 225px; }

  .enabled {
    background-color: $enabledColor;
  }

  .link-tools .tool-remove { display: none }
  .link-tools .tool-options { display: none }
  .link .mark-errors { display: none; }
  .marker-arrowheads { display: none; }
  .uml-class-methods-rect { display: none }

  text {
    font-family: $font-family-base;
    font-weight: normal;
  }

  .uml-class-name-text {
    fill: #fff;
  }

  .uml-class-name-rect {
    fill: $brand-primary;
    stroke: none;
  }

  .uml-class-attrs-rect {
    fill: #f5f5f5;
    stroke: #ddd;
    stroke-width: 1px;
  }

  .element.uml.Class {
    &.background {
      fill-opacity: 0.3;
    }
    &.selected {
      .uml-class-name-rect {
        fill: #c2606e;
      }
    }
  }

  .link.background {
    fill-opacity: 0.3;

    path {
      stroke: #ddd;
    }
  }
}

visualization-view ajax-loading-indicator {
  width: calc(100% - 12px);
}

.search-results ajax-loading-indicator {
  width: calc(100% - 30px);
}

ajax-loading-indicator {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1000;
  background-color: #ffffff;

  &.inline {
    position: inherit;

    .uil-default-css, img {
      position: relative;
      display: inline-block;
      top: inherit;
      left: calc(50% - 100px);
      margin: inherit;
    }
  }

  .uil-default-css, img {
    position: absolute;
    top: calc(50% - 100px);
    left: calc(50% - 100px);
    margin: 0 auto;
  }
}

ajax-loading-indicator-small {
  float: right;
  padding-right: 10px
}

.selection-form {
  padding: 15px;
}

.component-header {
  background-color: $brand-accent-lighter;
  padding: 15px;
  border-bottom: solid 1px #ddd;
  font-size: 26px;
  h3 {
    margin: 0;
  }
}

.main-header {
  background-color: $brand-accent-lighter;
  padding: 5px 0 5px 5px;

  h2 {
    padding-left: 10px;
    margin-top: 10px;
    .glyphicon {
      font-size: large;
      margin-left: 10px;
    }
  }
}

.fa-user, .fa-users {
  margin-right: 15px;
}

.model-header {
  @extend .main-header;
  cursor: pointer;
}

.main-editable-content {
  @include clearfix;
  padding-bottom: 10px;
}

.modal-dialog {
  &.modal-large {
    width: 90%;
  }
  &.modal-medium {
    width: 60%;
  }
  &.modal-small {
    width: 30%;
  }
  &.modal-adapting {
    width: auto;
    min-width: 30%;
    display: table;
  }
  &.modal-adapting-medium {
    width: auto;
    min-width: 60%;
    display: table;
  }
}

.modal-header i {
  color: $gray-base;
  cursor: pointer;
}

.modal-header {
  border-bottom: none;
}

.modal-footer {
  border-top: none;
}

.bottom {
  border-top: solid 1px #ddd;
}

.nav {
  a:hover {
    cursor: pointer;
  }
}

.navbar {
  min-height: 60px;
}

.navbar-brand {
  line-height: 40px;
}

.navbar-right {
  margin: 10px;

  .navbar-btn {
    margin: 0;
    padding: 0;
    background: transparent;

    button.btn {
      color: $navbar-default-brand-color;
      background: transparent;
      border: 0;
      font-weight: inherit;
      font-size: inherit;
      padding: 12px;
      line-height: 21px;
    }

    button.btn:hover {
      background-color: black;
      color: #ffffff;
      border: 0;
    }
  }
}

.navbar-default .navbar-nav > li > a:hover {
  background-color: $brand-accent-dark;
  text-decoration: none;
}

.navbar-right .navbar-btn button.btn:hover, .navbar-right .navbar-btn button.btn:focus {
  background-color: $brand-accent-dark;
  text-decoration: none;
  color: white;
}

.h2 {
  background-color: #f5f5f5;
}

.top-actions {
  @include clearfix;

  z-index: 1000;
  padding: 10px 10px 10px 10px;

  p.button-label {
    padding-top: 8px;
  }

  .left {
    float: left;
    margin-right: 5px;
  }

  .right {
    float: right;
    margin-left: 5px;
  }

  .alert {
    clear: both;
  }
}
/* ... */

